# SSM

./: .gitignore  CMakeLists.txt  Makefile
include/SSM/: SSM.h
src/: SSM.cpp
